refactor: rename energyconsumption to energy/emergies to be more align with the FE and routes
